# test-productizer

./: .gitignore  Dockerfile  Makefile  Pulumi.yml  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-deploy.yml  build-and-test.yml  build-test-deploy.yml  deploy-dev.yml  deploy-staging.yml  deploy-to-aws.yml  productizer-deploy.yml  python-app.yml
deploy/: main.py
docs/: test-productizer-testbed-final.drawio  test-productizer-testbed.drawio  test-productizer.drawio
infra/: Pulumi.dev.yml  Pulumi.staging.yml  main.py
infra/.lambda/: requirements.txt
infra/.lambda/layer/mangum-0.15.1.dist-info/: RECORD
productizer/: main.py
productizer/routes/: population.py
productizer/services/StatFinPopulation/: data_product.py  service.py
productizer/utils/: Authorizator.py  Requester.py  helpers.py  logger.py  settings.py
pulumi/: Pulumi.dev.yml  Pulumi.yml  main.py
src/: main.py
src/productizer/: main.py
src/productizer/routes/: base.py  population.py
src/productizer/utils/: Authorizator.py  Requester.py  models.py
src/routes/: population.py
src/services/StatFinPopulation/: __init__.py  data_product.py  service.py
src/utils/: Requester.py  helpers.py
test-productizer/: main.py
test-productizer/services/: StatFinPopulation.py  StatFinResources.py
test-productizer/utils/: Requester.py  helpers.py
testbed-test-productizer/: main.py
testbed-test-productizer/data/: city_codes.py  example_suomifi_metadata.xml
testbed-test-productizer/routes/: base.py  population.py  saml.py
testbed-test-productizer/services/: SAML_SuomiFi.py  StatFinPopulation.py
testbed-test-productizer/utils/: Requester.py  helpers.py  models.py
tests/: test_population.py
(+8 files in other folders)
