[tool.poetry]
name = "testbed-test-productizer"
version = "0.1.0"
description = ""
authors = ["Lassi Piironen <lsipii@kapsi.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
pedantic = "^1.11.3"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
aiohttp = "^3.8.1"
orjson = "^3.7.12"
pysaml2 = "^7.2.1"

[tool.poetry.dev-dependencies]
pyngrok = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
