[tool.poetry]
name = "productizer"
version = "0.1.0"
description = ""
authors = ["Lassi Piironen <lsipii@kapsi.fi>"]

packages = [
    { include = "productizer", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
pedantic = "^1.11.3"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
aiohttp = "^3.8.1"
orjson = "^3.7.12"
python-dateutil = "^2.8.2"
stringcase = "^1.2.0"
mangum = "^0.15.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pytest = "^7.1.2"
requests = "^2.28.1"
pulumi = "^3.40.0"
pulumi-aws = "^5.13.0"
pulumi-aws-native = "^0.29.0"
pulumi-command = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
